@@ -1,7 +1,7 @@
 name = POFile
 
 [ReadmeFromPod]
-filename = lib/POFile.rakumod
+filename = doc/POFile.rakudoc
 
 [UploadToZef]
 
